@@ -118,7 +118,21 @@ install: all
 #
 # Install test code
 #
-TESTMOD = \
+TESTNSD = \
+	nsd.tcl
+
+TESTMOD =
+
+#TESTMOD = \
+#	server1-cert.pem \
+#	server1-key.pem \
+#	server1-key-unsecure.pem \
+#	client1-cert.pem \
+#	client1-key.pem \
+#	client1-key-unsecure.pem \
+#	server-cafile.pem
+
+TESTTCLMOD = \
 	ns_openssl_sockcallback.tcl \
 	ns_openssl_socklistencallback.tcl \
 	ns_openssl_socklisten.tcl \
@@ -132,15 +146,36 @@ install-tests: install
 	@if [ ! -d "$(INST)/servers/test" ]; then \
 		echo "** $(CP) -r $(INST)/servers/server1 $(INST)/servers/test;  $(MKDIR)"; \
 		$(CP) -r $(INST)/servers/server1 $(INST)/servers/test; \
-		exit 1;\
 	fi
-	@if [ -n "$(TESTMOD)" ]; then \
-		for i in $(TESTMOD); do \
-			$(MKDIR) $(INST)/servers/test/modules/tcl/nsopenssl; \
+
+	@if [ -n "$(TESTNSD)" ]; then \
+		$(MKDIR) $(INST)/tests; \
+		for i in $(TESTNSD); do \
+			$(CP) tests/$$i $(INST)/tests/nsopenssl.tcl; \
 		done \
 	fi
 
-#			$(CP) tests/$$i $(INST)/servers/test/modules/tcl/nsopenssl; \
+	@if [ -n "$(TESTMOD)" ]; then \
+		$(MKDIR) $(INST)/servers/test/modules/nsopenssl; \
+		for i in $(TESTMOD); do \
+			$(CP) tests/$$i $(INST)/servers/test/modules/nsopenssl; \
+		done \
+	fi
+
+	@if [ -n "$(TESTTCLMOD)" ]; then \
+		$(MKDIR) $(INST)/servers/test/modules/tcl/nsopenssl; \
+		for i in $(TESTTCLMOD); do \
+			$(CP) tests/$$i $(INST)/servers/test/modules/tcl/nsopenssl; \
+		done \
+	fi
+
+	@if [ -n "$(TESTPAG)" ]; then \
+		$(MKDIR) $(INST)/servers/test/pages/nsopenssl; \
+		for i in $(TESTPAG); do \
+			$(CP) tests/$$i $(INST)/servers/test/pages/nsopenssl; \
+		done \
+	fi
+
 
 ## NOTES #################################################################################
 
